--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-git config --global user.name blabla<br>
+git config --global user.name blabla </br>
 git config --global user.email blabal@bla
 git init
 git status
