--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 git config --global user.name blabla </br>
-git config --global user.email blabal@bla
-git init
-git status
-git add
-git commit
-git log
-git checkout
-git branch
-git push
-git pull
-git merge
-git clone
+git config --global user.email blabal@bla </br>
+git init </br>
+git status </br>
+git add </br>
+git commit </br>
+git log </br>
+git checkout </br>
+git branch </br>
+git push </br>
+git pull </br>
+git merge </br>
+git clone </br>
